# cycling-path-optimizer

./: .gitignore  README.md  app.py  pyproject.toml  test_map.html
old_files/: nodes.csv  paths.ipynb  paths2.ipynb
utils/: routing.py
utils/datasets/: image_matches_n_3_yolo.parquet  image_to_url.parquet  optimal_features.parquet
