[project]
name = "cycling-path-optimizer"
version = "0.1.0"
description = ""
authors = [
    {name = "heisendelta",email = "ariya8.narayan7@outlook.jp"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "numpy (>=2.3.2,<3.0.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "osmnx[plotting] (>=2.0.5,<3.0.0)",
    "folium (>=0.20.0,<0.21.0)",
    "matplotlib (>=3.10.5,<4.0.0)",
    "geopy (>=2.4.1,<3.0.0)",
    "overpy (>=0.7,<0.8)",
    "shapely (>=2.1.1,<3.0.0)",
    "networkx (>=3.5,<4.0)",
    "scipy (>=1.16.1,<2.0.0)",
    "streamlit (>=1.48.1,<2.0.0)",
    "streamlit-folium (>=0.25.1,<0.26.0)",
    "streamlit-js-eval (>=0.1.7,<0.2.0)",
    "scikit-learn (>=1.7.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"

